web-infras/parser/tests/fixtures/babel/es2022/class-static-block/invalid-arguments/output.txt
[SyntaxError]: 'arguments' is not allowed in class field initializer or static initialization block (3,16)
3|    this.foo = arguments;
 |              ^
